feat: add three sections more

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             </section>
             <section class="brands">
                 <div class="brands__item all">
-                    <div class="all-content">
+                    <div class="title-arrow">
                         <h3>Все бренды</h3>
-                        <img src="./img/brands/icon-more.svg" alt="">
+                        <a href="#"><img src="./img/brands/icon-more.svg" alt=""></a>
                     </div>
                 </div>
                 <div class="brands__item bio">
@@ -194,7 +194,106 @@
                 </div>
             </section>
             <section class="popular">
-                <h2></h2>
+                <div class="popular__title-icon">
+                    <h2>Популярные товары</h2>
+                    <a href="#"><img src="./img/brands/icon-more.svg" alt=""></a>
+                </div>
+                <div class="popular__cards">
+                    <div class="popular__card">
+                        <div class="popular__img">
+                            <img src="./img/tweezers__img.png" alt="scissops">
+                        </div>
+                        <p class="popular__text">Иглодержатель Криля-Вуда</p>
+                        <p class="popular__price">3 600 ₽</p>
+                        <button class="popular__btn">В корзину</button>
+                    </div>
+                    <div class="popular__card">
+                        <div class="popular__img">
+                            <img src="./img/tweezers__img.png" alt="scissops">
+                        </div>
+                        <p class="popular__text">Иглодержатель Криля-Вуда</p>
+                        <p class="popular__price">3 600 ₽</p>
+                        <button class="popular__btn">В корзину</button>
+                    </div>
+                    <div class="popular__card">
+                        <div class="popular__img">
+                            <img src="./img/tweezers__img.png" alt="scissops">
+                        </div>
+                        <p class="popular__text">Иглодержатель Криля-Вуда</p>
+                        <p class="popular__price">3 600 ₽</p>
+                        <button class="popular__btn">В корзину</button>
+                    </div>
+                    <div class="popular__card">
+                        <div class="popular__img">
+                            <img src="./img/tweezers__img.png" alt="scissops">
+                        </div>
+                        <p class="populars__text">Иглодержатель Криля-Вуда</p>
+                        <p class="popular__price">3 600 ₽</p>
+                        <button class="popular__btn">В корзину</button>
+                    </div>
+                </div>
+            </section>
+            <section class="about">
+                <div class="about__left">
+                    <p class="about__text">
+                        Компания "Медтех" - это лидер в области производства и продажи медицинского оборудования. Мы работаем на рынке более 10 лет и предлагаем широкий ассортимент продукции высокого качества.
+                    </p>
+                    <p class="about__text">
+                        Наша компания специализируется на медицинском оборудовании для различных областей медицины, таких как хирургия, реабилитация, диагностика и терапия. В нашем каталоге товаров представлены инновационные решения для различных сфер медицинской деятельности.
+                    </p>
+                    <p class="about__text">
+                        Мы работаем только с проверенными и надежными производителями, которые гарантируют качество своей продукции. Кроме того, мы контролируем каждый этап производства и поставки оборудования, чтобы нашим клиентам было предоставлено только лучшее.
+                    </p>
+                    <p class="about__text">
+                        Компания "Медтех" заботится о своих клиентах, поэтому мы предлагаем не только качественное оборудование, но и квалифицированную консультацию и помощь в выборе необходимой продукции.
+                    </p>
+                </div>
+                <div class="about__right">
+                    <div class="about__pic">
+                        <img src="./img/about__catalog-image.png" alt="">
+                    </div>
+                    <button class="about__btn">Скачать каталог (pdf)</button>
+                </div>
+            </section>
+            <section class="news">
+                <div class="news__title-icon">
+                    <h2>Новинки</h2>
+                    <a href="#"><img src="./img/brands/icon-more.svg" alt=""></a>
+                </div>
+                <div class="news__cards">
+                    <div class="news__card">
+                        <div class="news__img">
+                            <img src="./img/tweezers__img.png" alt="tweezers">
+                        </div>
+                        <p class="news__text">Иглодержатель Криля-Вуда</p>
+                        <p class="news__price">3 600 ₽</p>
+                        <button class="news__btn">В корзину</button>
+                    </div>
+                    <div class="news__card">
+                        <div class="news__img">
+                            <img src="./img/tweezers__img.png" alt="tweezers">
+                        </div>
+                        <p class="news__text">Иглодержатель Криля-Вуда</p>
+                        <p class="news__price">3 600 ₽</p>
+                        <button class="news__btn">В корзину</button>
+                    </div>
+                    <div class="news__card">
+                        <div class="news__img">
+                            <img src="./img/tweezers__img.png" alt="tweezers">
+                        </div>
+                        <p class="news__text">Иглодержатель Криля-Вуда</p>
+                        <p class="news__price">3 600 ₽</p>
+                        <button class="news__btn">В корзину</button>
+                    </div>
+                    <div class="news__card">
+                        <div class="news__img">
+                            <img src="./img/tweezers__img.png" alt="tweezers">
+                        </div>
+                        <p class="news__text">Иглодержатель Криля-Вуда</p>
+                        <p class="news__price">3 600 ₽</p>
+                        <button class="news__btn">В корзину</button>
+                    </div>                  
+                </div>
             </section>
         </div>
     </main>
