feat: add footer

--- a/index.html
+++ b/index.html
@@ -297,5 +297,48 @@
             </section>
         </div>
     </main>
+    <footer class="footer">
+       <div class="footer__container container">
+        <div class="footer__content">
+            <div class="footer__item footer__item_logo">
+                <img src="./img/header-images/logo.png" alt="logo">
+            </div>
+            <div class="footer__item footer__item_about">
+                <h5>О компании</h5>
+                <a href="#">О компании</a>
+                <a href="#">Новости</a>
+                <a href="#">Контакты</a>
+                <a href="#">Статьи</a>
+            </div>
+            <div class="footer__item footer__item_popular">
+                <h5>Популярные категории</h5>
+                <a href="#">Имплантология</a>
+                <a href="#">Хирургия</a>
+                <a href="#">Пародонтология</a>
+                <a href="#">Ортопедия</a>
+                <a href="#">Терапия и диагностика</a>
+                <a href="#">Ортодонтия</a>
+                <a href="#">Расходные материалы</a>
+                <a href="#">Оборудование</a>
+            </div>
+            <div class="footer__item footer__item_contacts">
+                <h5>Контакты</h5>
+                <a class="loc" href="">
+                    г. Москва, ул. Усачева, д. 62, стр. 1 офис 1
+                </a>
+                <a class="phone" href="tel: +74959336147">
+                    +7 (495) 933-6147</a>
+                <a class="phone" href="tel: +74959336147">
+                    +7 (495) 933-6147</a>
+                <a class="mail" href="mailto: max@maximum.su">
+                    max@maximum.su</a>
+            </div>
+        </div>
+        <div class="footer__copyright">
+            <p><a href="#">2023 (с) Все права защищены</a></p>
+            <p><a href="#">Политика конфиденциальности</a></p>
+        </div>
+       </div> 
+    </footer>
 </body>
 </html>
