feat: correct map link

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             </div>
             <div class="footer__item footer__item_contacts">
                 <h5>Контакты</h5>
-                <a class="loc" href="">
+                <a class="loc" target="_blank" href="https://goo.gl/maps/ch8vtxhbrJU6doYh7">
                     г. Москва, ул. Усачева, д. 62, стр. 1 офис 1
                 </a>
                 <a class="phone" href="tel: +74959336147">
